cambiar definitions para ingresar datos
